--- a/snippets/templates/snippets/index.html
+++ b/snippets/templates/snippets/index.html
@@ -2,9 +2,9 @@
 
 {% block title %}
 <section class="mdc-toolbar__section mdc-toolbar__section--align-end" role="toolbar">
-  <a class="material-icons mdc-toolbar__icon" href="/snippets/week/{{ prev_week }}/">navigate_before</a>
+  <a class="material-icons mdc-toolbar__icon" href="/snippets/{{ prev_week }}/">navigate_before</a>
   <span class="week-indicator">第{{week_no}}周</span>
-  <a class="material-icons mdc-toolbar__icon" href="/snippets/week/{{ next_week }}/">navigate_next</a>
+  <a class="material-icons mdc-toolbar__icon" href="/snippets/{{ next_week }}/">navigate_next</a>
 </section>
 {% endblock %}
 
