--- a/snippets/templates/snippets/index.html
+++ b/snippets/templates/snippets/index.html
@@ -22,6 +22,9 @@
         {{ snippet.user }}
       </button>
     {% endfor %}
+    {% for name in not_submitted %}
+      <button class="mdc-button mdc-button--stroked not_submitted">{{ name }}</button>
+    {% endfor %}
   </div>
   <ul id="my-tab-contents" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
     {% for snippet in snippet_list %}
