Remove stroke to make not_submit list not stand out

--- a/snippets/templates/snippets/base.html
+++ b/snippets/templates/snippets/base.html
@@ -35,8 +35,7 @@
         color: #BDBDBD;
       }
       .mdc-button:not(:disabled).not_submitted {
-        color: #F44336;
-        border-color: #FFCDD2;
+        color: #FFCDD2;
         cursor: default;
       }
       .mdc-button:not(:disabled).snippet-button-active {
