--- a/snippets/templates/snippets/index.html
+++ b/snippets/templates/snippets/index.html
@@ -23,7 +23,7 @@
       </button>
     {% endfor %}
     {% for name in not_submitted %}
-      <button class="mdc-button mdc-button--stroked not_submitted">{{ name }}</button>
+      <button class="mdc-button not_submitted">{{ name }}</button>
     {% endfor %}
   </div>
   <ul id="my-tab-contents" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
